--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@webjet/react": "^3.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
